<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppEnergyMonitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Manage your Battery Life!</string>
    <string name="button_view_usage">View App Energy Usage</string>
    <string name="title_activity_home_screen">Go To HomeScreen</string>
    <string name="title_activity_CPUUsage">CPUUsage</string>
    <string name="title_activity_display_app_usage">DisplayAppUsage</string>
    <string name="title_activity_display_thresholds">DisplayThresholds</string>
    <string name="check_app">Is this Acceptable</string>
    <string name="app_memory_text">Memory Usage</string>
    <string name="app_energy_text">Energy Consumed</string>
    <string name="app_name_text">Process Name</string>
    <string name="button_view_thresholds">View Current Thresholds</string>
    <string name="calibrate">Calibrate your device!</string>

</resources>
