<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/home_screen_message"
        android:background="@color/black"
        android:textSize="40dp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        android:gravity="center"
        android:layout_weight="0.40"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Android Energy Monitor" />
    <Button
        android:background="@color/grey"
        android:onClick="onCalibrate"
        android:layout_weight="0.23"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="25dp"
        android:typeface="serif"
        android:textColor="@color/white"
        android:text="@string/calibrate" />

    <Button
        android:background="@color/grey"
        android:onClick="viewUsage"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/button_view_usage"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:typeface="serif"/>

    <Button
        android:background="@color/grey"
        android:onClick="viewThreshold"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:text="@string/button_view_thresholds" />
</LinearLayout>
