<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" >

    <RelativeLayout
        android:id="@+id/layout_item_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/layout_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_app_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_app_name"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_app_energy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_energy_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_app_energy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_app_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_app_energy"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_app_memory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_memory_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_app_memory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>